--- a/src/app/views/config/config.component.html
+++ b/src/app/views/config/config.component.html
@@ -1,1 +1,3 @@
-<p>config works!</p>
+<app-head-description></app-head-description>
+<button (click)="logout()">Cerrar sesión</button>
+<app-navbar></app-navbar>
