--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,9 +1,6 @@
-<div id="cabecera">
-  <div id="logo-titulo">
-    <img id="logo" src="../../../assets/img/icon.png">
-    <div id="titulo">
-      <h1>.music</h1>
-    </div>
-  </div>
-  <p>Tú aplicación de playlists y vídeos músicales</p>
+<app-home-head></app-home-head>
+<div id="botonesInicio">
+  <button class="botonInicio" routerLink="/login">Inicia Sesión</button>
+  <button class="botonInicio" routerLink="/register">Regístrate</button>
+  <a href="/music">Entrar sin sesión ></a>
 </div>
