--- a/src/app/views/user/user.component.html
+++ b/src/app/views/user/user.component.html
@@ -1,1 +1,11 @@
-<p>user works!</p>
+<app-head-description></app-head-description>
+  <div id="banner">
+    <img id="bannerImg" src="../../../assets/img/banner.jpg">
+    <img id="userLogo" src="../../../assets/img/profile.png">
+    <img routerLink="/config" id="configLogo" src="../../../assets/img/gear.png">
+    <hr/>
+    <p id="userUsername">{{userName}}</p>
+    <div id="purpleGradient"></div>
+    <div id="purpleDiv"></div>
+  </div>
+<app-navbar></app-navbar>
